--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Build list
-        run: ./build.sh > ukpbrlist.txt
+        run: bash build.sh > ukpbrlist.txt
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
